# raspi-playground

./: .gitignore  README.md  main.py  pyproject.toml
src/main/raspi_playground/basics/: buzzer_button.py  light_sensor.py  stoplight.py  yolo.py
src/main/raspi_playground/cat_detector/: cat_buzzer.py  cat_follower.py  sprayer_button.py
src/main/raspi_playground/servos/: pan_tilt_servo.py  servo_calibration_pca9685.py
src/main/raspi_playground/vision/: camera_basics.py
